@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-08-26T16:17:30Z",
+  "timestamp" : "2023-08-27T08:16:47Z",
   "count_outdated" : 954,
   "uniques_outdated" : 600,
-  "count" : 972,
-  "uniques" : 613,
+  "count" : 973,
+  "uniques" : 614,
   "clones" : [
     {
       "timestamp": "2023-08-13T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -88,6 +88,15 @@
     },
     {
       "timestamp": "2023-08-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
