@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2023-08-13T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -49,6 +49,11 @@
     },
     {
       "timestamp": "2023-08-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-27T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
