@@ -1,3 +1,12 @@
+2023-08-27T08:16:47Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5989799595 # 1120
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-27
+* notice: last 14d: unq all: 4 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 600 954 / 613 972
+* notice: next accum: outdated-unq outdated-all / unq all: 600 954 / 614 973
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-08-13 2023-08-27]
+
 2023-08-26T16:17:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5985794262 # 1118
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-26
